--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -20,8 +20,17 @@ main>.container {
 
 }
 
-
-
+#lan-option {
+    box-shadow: none !important;
+    background-color: rgb(0, 0, 0, .1);
+}
+#lan-option:focus{
+    border-color: #fff;
+    outline: none;
+}
+#lan-option option{
+    color: #111;
+}
 .form-control-dark {
 
     color: #fff;
